public/style.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

body {
    background-color: #111;
    width: 100svw;
    height: 100svh;
    color: #ccc;
    margin: 0;
    padding: 0;
    font-family: "Noto Sans", "Noto Color Emoji", sans-serif;
    font-size: 1em;
    display: flex;
}

#bodywrap {
    width: 100%
}

textarea,
input,
select,
button {
    font-family: "Noto Sans", "Noto Color Emoji", sans-serif;
}

::-webkit-scrollbar {
    width: 10px;
    scrollbar-gutter: stable;
}

::-webkit-scrollbar-thumb {
    background-color: #666;
    box-shadow: inset 0 0 0 1px #333;
    border-radius: 10px;
    background-clip: content-box;
    border: 2px solid transparent;
    min-height: 40px;
}

#chatWrap {
    position: relative;
    max-height: calc(100% - 1em);
    max-width: 85%;
}

#universalControls {
    justify-content: center;
    display: flex;
    position: absolute;
    width: 100%;
}

#LLMChatWrapper,
#OOCChatWrapper {
    height: 100%;
    overflow: hidden;
}

@media (max-width: 800px) {

    #LLMChatWrapper,
    #OOCChatWrapper {
        flex-basis: 100%;
        height: calc(50% - 15px);
        box-sizing: border-box;
    }
}

#inputBlock,
#AIInputBlock {
    display: flex;
    align-items: center;
    align-content: center;
    justify-content: center;
    gap: 5px;
}

#controlPanel h4 {
    margin: 0;
    margin-top: 10px;
    margin-bottom: 10px;
    font-size: 1.25em;
    text-align: center;
}

#controlPanel span {
    font-size: 0.9em;
}

input,
textarea,
button,
select {
    border-radius: 5px;
    border: 1px solid #666;
    background-color: #333;
    color: #999;
    outline: none;
    transition: all 250ms;
}

button,
select {
    cursor: pointer;
}


select {
    font-size: 0.8em;
    appearance: none;
    padding: 3px 1em 3px 3px;
    width: fit-content;
}

select:hover {
    background-color: #666;
    color: #ccc;
    border-color: #ccc
}

.custom-select {
    min-width: 30px;
    position: relative;
}

.custom-select::before,
.custom-select::after {
    --size: 0.3rem;
    content: "";
    position: absolute;
    right: 3px;
    top: 3px;
    pointer-events: none;
}

.custom-select::before {
    border-left: var(--size) solid transparent;
    border-right: var(--size) solid transparent;
    border-bottom: var(--size) solid #888;
    top: 25%;
}

.custom-select::after {
    border-left: var(--size) solid transparent;
    border-right: var(--size) solid transparent;
    border-top: var(--size) solid #888;
    top: 50%;
}

/*CHECKBOXES*/
input[type='checkbox'] {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    /* outline: 1px solid #666; */
    position: relative;
    width: 1.5em;
    height: 1.5em;
    overflow: hidden;
    border-radius: 3px;
    border: 1px solid #666;
    background-color: #333;
    box-shadow: inset 0 0 2px 0 rgba(0, 0, 0, 0.5);
    cursor: pointer;
    transform: translateY(-0.075em);
    flex-shrink: 0;
    place-content: center;
    filter: brightness(1.2);
}

input[type='checkbox'] {
    display: grid;
}

input[type="checkbox"]::before {
    content: "";
    width: 1em;
    height: 1em;
    transform: scale(0);
    transition: 120ms transform ease-in-out;
    box-shadow: inset 1em 1em #888;
    transform-origin: bottom left;
    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
}

input[type="checkbox"]:checked::before {
    transform: scale(1);
}

input[type='checkbox']:hover {
    filter: brightness(2);
}

.checkbox_label {
    display: flex;
    flex-direction: row;
    column-gap: 5px;
    align-items: baseline;
}

button,
input {
    padding: 3px;
    width: fit-content;
}

#toggleMode {
    cursor: pointer;
    border-radius: 5px;
    border: 1px solid #666;
}

.hoverglow {
    transition: all 250ms;
    outline: 1px solid #666;
    filter: saturate(0.5);

}

.hoverglow:hover {
    outline: 1px solid white;
    filter: saturate(1);
    background-color: #333;

}

.brightUp:hover,
.brightUp:focus {
    filter: brightness(2)
}

.bgBrightUp:hover {
    background-color: #555;
    border: 1px solid #ccc
}

#OOCChatWrapper img,
#LLMChatWrapper img {
    max-height: 80%;
    max-width: 80%
}

code {
    font-family: monospace;
    background: black;
    border-radius: 5px;
    padding: 3px;
    margin: 5px;
    line-height: 1.3em;
}

pre {
    border: 1px solid white;
    padding: 3px;
    background: black;
    margin: 5px;
    border-radius: 5px;
    width: min-content;
}

#chat div p,
#AIchat div p {
    margin: 0;
    margin-bottom: 1em;
    padding: 0;
}

#messageInput,
#AIMessageInput {
    height: 3em;
    flex-grow: 1;
}

#messageInput::placeholder,
#AIMessageInput::placeholder {
    text-align: center;
}

input::placeholder {
    color: #666
}

.disconnected::placeholder {
    color: red;
}

#chat,
#AIchat,
#userChatAndUserList {
    background: #333;
    margin: 5px;
    border-radius: 5px;
    padding: 5px;
    flex: 1;

}

#userChatAndUserList {
    overflow-y: hidden;
}

#chat,
#AIchat {
    overflow-y: auto;
    max-height: 100%;
}

#userList {
    overflow: hidden;
}

#userRole {
    font-size: 0.8em;
    color: #666
}

#userList ul {
    list-style: none;
    margin: 0;
    padding: 0;
    width: 100px;
}

#userList ul li {
    padding: 3px;
    font-size: 0.8em;
}

#chat {
    border-radius: 0;
    border-right: 1px solid black;
}

hr {
    background-image: linear-gradient(90deg, rgba(128, 128, 128, 100), rgba(0, 0, 0, 0));
    margin: 5px 0;
    height: 1px;
    min-height: 1px;
    border: 0;
    opacity: 0.2;
}

.padding5 {
    padding: 5px;
}

.Hcentered {
    /* text-align: center; */
    justify-content: center;
}

.Vcentered {
    align-items: center;
    align-content: center;
}

.marginTop5 {
    margin-top: 5px;
}

.marginBot5 {
    margin-bottom: 5px;
}

.marginLeft5 {
    margin-left: 5px;
}

.marginRight5 {
    margin-right: 5px;
}

.margin5 {
    margin: 5px;
}

.flexbox {
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
}

.noGap {
    gap: 0
}

.noWrap {
    flex-wrap: nowrap;
}

.flexFlowCol {
    flex-flow: column;
}

.flex1 {
    flex: 1
}

.widthMinContent {
    width: min-content
}

.widthFitContent {
    width: fit-content
}

.fontSize1p5em {
    font-size: 1.5em
}

.greyscale {
    filter: saturate(0.3)
}

.greyscale:hover {
    filter: saturate(0.7)
}

.transition250 {
    transition: all 250ms;
}

.justifySpaceBetween {
    justify-content: space-between;
}

.textshadow {
    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
}

.flipHorizontal {
    display: inline-block;
    transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    -ms-transform: scaleX(-1);
    -o-transform: scaleX(-1);
}

.flipVertical {
    display: inline-block;
    transform: scaleY(-1);
    -webkit-transform: scaleY(-1);
    -ms-transform: scaleY(-1);
    -o-transform: scaleY(-1);
}

.flipBoth {
    display: inline-block;
    transform: scale(-1, -1);
    -webkit-transform: scale(-1, -1);
    -ms-transform: scale(-1, -1);
    -o-transform: scale(-1, -1);
}

.mirror {
    display: inline-block;
    transform: rotateX(180deg);
}

